gitops/apps/base/matomo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: matomo
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
